--- a/JASP-Desktop/analysisforms/MachineLearning/mlclassificationknnform.ui
+++ b/JASP-Desktop/analysisforms/MachineLearning/mlclassificationknnform.ui
@@ -90,7 +90,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Results to predict target / Evaluate model prediction on test set</string>
+            <string>Make predictions for new data</string>
            </property>
           </widget>
          </item>
@@ -114,6 +114,9 @@
       </property>
       <item row="0" column="0" rowspan="2" colspan="2">
        <widget class="ExpanderButton" name="expanderAdvanced">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
         <property name="text">
          <string>Advanced Options</string>
         </property>
@@ -847,19 +850,6 @@
               </property>
              </widget>
             </item>
-            <item row="2" column="1">
-             <spacer name="verticalSpacer_6">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>40</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
            </layout>
           </widget>
          </item>
@@ -987,6 +977,19 @@
            </layout>
           </widget>
          </item>
+         <item row="2" column="0">
+          <spacer name="verticalSpacer_6">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
         </layout>
        </widget>
       </item>
@@ -1044,7 +1047,7 @@
                <bool>false</bool>
               </property>
               <property name="text">
-               <string>Error vs K</string>
+               <string>Accuracy vs k</string>
               </property>
              </widget>
             </item>
@@ -1207,10 +1210,9 @@
                 <height>16777215</height>
                </size>
               </property>
-              <zorder>confusionTable</zorder>
              </widget>
             </item>
-            <item row="6" column="0" colspan="3">
+            <item row="6" column="0" colspan="4">
              <widget class="BoundCheckBox" name="confusionTable">
               <property name="minimumSize">
                <size>
